@@ -12720,6 +12720,13 @@ damit mit der n"achsten Release alle etwas davon haben :-)
 
 \cleardoublepage
 
+\begin{quote}{\it
+''Ich schlage vor, dem Parlament ein Gesetz vorzulegen, \\
+das einem Autor, der ein Buch ohne Index publiziert, \\
+das Copyright entzieht und ihn au"serdem f"ur sein Vergehen \\
+mit einer Geldstrafe belegt.''\\
+\hspace{2cm} --Lord John Campbell}\end{quote}
+
 \printindex
 
 \end{document}
