@@ -1,4 +1,4 @@
-$Id: changelog,v 1.20 2005/12/17 16:36:00 alfred Exp $
+$Id: changelog,v 1.21 2006/03/18 11:25:55 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -1025,3 +1025,7 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 - Addition    : Add 2650 target
  
 - Bugfix      : listing on 16-bit hosts lead to crashes
+
+2006-03-18 [Bld 44]
+
+- Addition    : Add paged address space for 68HC12X
